--- a/sytle/css/index.css
+++ b/sytle/css/index.css
@@ -5,14 +5,20 @@
   padding: 0.38095rem; }
 
 .weui_tabbar .weui_tabbar_item {
-  padding: 0.7619rem 0; }
+  padding: 0.38095rem 0; }
   .weui_tabbar .weui_tabbar_item .weui_tabbar_label {
     font-family: "SimSun" "arial" "Helvetica" "NSimSun" "FangSong" "Microsoft YaHei";
     color: #888;
     font-weight: normal;
-    font-size: 0.8381rem; }
+    font-size: 0.60952rem; }
   .weui_tabbar .weui_tabbar_item.weui_bar_item_on .weui_tabbar_label {
     color: #09BB07; }
+  .weui_tabbar .weui_tabbar_item .weui_tabbar_icon {
+    width: 0.95238rem;
+    height: 0.95238rem; }
+    .weui_tabbar .weui_tabbar_item .weui_tabbar_icon img {
+      width: 100%;
+      height: 100%; }
 
 .weui_cell {
   padding: 0.38095rem 0.57143rem; }
@@ -28,6 +34,15 @@
       right: 0.38095rem;
       top: 0rem;
       border: none; }
+    .weui_cells .weui_cell_bd .jc-content {
+      font-family: "SimSun" "arial" "Helvetica" "NSimSun" "FangSong" "Microsoft YaHei";
+      color: #222;
+      font-weight: normal;
+      font-size: 0.60952rem; }
+  .weui_cells .weui_cell_ft:after {
+    height: 0.38095rem;
+    width: 0.38095rem;
+    border-width: 0.07619rem 0.07619rem 0 0; }
   .weui_cells .weui_select {
     line-height: normal;
     height: 1.29524rem; }
@@ -204,11 +219,20 @@ body {
         color: #222;
         font-weight: normal;
         font-size: 0.7619rem; }
+        .info-part > li .weui_media_box .weui_media_title .type-name {
+          line-height: 1.06667rem; }
         .info-part > li .weui_media_box .weui_media_title .check-time {
-          margin-left: 0.7619rem; }
-      .info-part > li .weui_media_box .weui_media_desc > span {
-        display: block;
-        margin-bottom: 0.30476rem; }
+          margin-left: 0.7619rem;
+          line-height: 1.06667rem; }
+      .info-part > li .weui_media_box .weui_media_desc {
+        margin-top: 0.30476rem; }
+        .info-part > li .weui_media_box .weui_media_desc > span {
+          display: block;
+          margin-bottom: 0.07619rem;
+          font-family: "SimSun" "arial" "Helvetica" "NSimSun" "FangSong" "Microsoft YaHei";
+          color: #666;
+          font-weight: normal;
+          font-size: 0.53333rem; }
       .info-part > li .item-link {
         display: block; }
       .info-part > li .item-state {
@@ -219,33 +243,56 @@ body {
         font-family: "SimSun" "arial" "Helvetica" "NSimSun" "FangSong" "Microsoft YaHei";
         color: #222;
         font-weight: normal;
-        font-size: 0.60952rem; }
+        font-size: 0.53333rem; }
       .info-part > li span.item-state {
         background-color: #ddd; }
   .info-title {
     border-top: none;
-    height: 2.28571rem;
+    height: 1.90476rem;
     background-color: #fff;
     border-bottom: 1px solid #CCC; }
     .info-title span {
-      padding-left: 0.30476rem;
+      padding: 0 0.45714rem;
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
       min-width: 4.57143rem;
-      border-bottom: 2px solid #0075C2;
+      border-bottom: 4px solid #0075C2;
       text-shadow: none;
       float: left;
       text-align: left;
-      height: 2.28571rem;
-      line-height: 2.28571rem;
+      height: 1.90476rem;
+      line-height: 1.90476rem;
       font-family: "Microsoft YaHei";
       color: #3880bd;
       font-weight: normal;
-      font-size: 0.7619rem; }
+      font-size: 0.60952rem; }
     .info-title .btn_add {
-      margin-right: 0.30476rem;
+      margin-right: 0.38095rem;
       margin-top: 0.38095rem; }
+
+.check-info-detail .weui_cell_bd {
+  min-height: 0; }
+  .check-info-detail .weui_cell_bd .btn {
+    font-size: 0.53333rem;
+    top: -0.07619rem; }
+.check-info-detail .weui_label {
+  font-family: "SimSun";
+  color: #222;
+  font-weight: normal;
+  font-size: 0.60952rem;
+  width: 3.80952rem; }
+.check-info-detail .weui_input {
+  font-family: "SimSun";
+  color: #222;
+  font-weight: normal;
+  font-size: 0.60952rem; }
+.check-info-detail .weui_select {
+  height: 0.8381rem;
+  font-family: "SimSun";
+  color: #222;
+  font-weight: normal;
+  font-size: 0.60952rem; }
 
 body, html {
   height: 100%;
