--- a/sytle/css/index.css
+++ b/sytle/css/index.css
@@ -1,3 +1,6 @@
+* {
+  max-height: 100%; }
+
 .weui_tab_bd {
   padding-bottom: 4.57143rem; }
 
@@ -405,6 +408,13 @@ body {
     color: #666;
     font-weight: normal;
     font-size: 0.60952rem; }
+
+.weui_panel_bd .weui_media_desc,
+.weui_panel_bd .weui_media_title {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 222;
+  white-space: normal; }
 
 .listPage {
   height: 100%; }
