--- a/sytle/sass/index.scss
+++ b/sytle/sass/index.scss
@@ -14,6 +14,9 @@
 //历史列表页面
 @import "list";
 
+//历史详细页面
+@import "viewDetail";
+
 body, html {
     height: 100%;
     -webkit-tap-highlight-color: transparent;
