--- a/sytle/css/index.css
+++ b/sytle/css/index.css
@@ -1,6 +1,3 @@
-* {
-  max-height: 100%; }
-
 .weui_tab_bd {
   padding-bottom: 4.57143rem; }
 
@@ -352,7 +349,27 @@ body {
     font-size: 0.68571rem; }
 
 .check-info-detail {
+  position: relative;
   padding-bottom: 4.57143rem; }
+  .check-info-detail .btn_show_detail {
+    position: absolute;
+    right: 0.38095rem;
+    top: 0.30476rem;
+    border-color: #000;
+    color: #222; }
+  .check-info-detail .weui_media_text .weui_media_desc,
+  .check-info-detail .weui_media_text .weui_media_title {
+    overflow: visible;
+    white-space: normal;
+    -webkit-line-clamp: 1000; }
+  .check-info-detail .weui_media_text .weui_media_title {
+    font-weight: 600; }
+  .check-info-detail .weui_media_text ul {
+    list-style: square inside url("../../image/eg_arrow.gif"); }
+    .check-info-detail .weui_media_text ul li p {
+      display: inline; }
+  .check-info-detail .item-detail-info {
+    display: none; }
 
 .layout-footer {
   background-color: #fff; }
@@ -408,13 +425,6 @@ body {
     color: #666;
     font-weight: normal;
     font-size: 0.60952rem; }
-
-.weui_panel_bd .weui_media_desc,
-.weui_panel_bd .weui_media_title {
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 222;
-  white-space: normal; }
 
 .listPage {
   height: 100%; }
