--- a/sytle/sass/_list.scss
+++ b/sytle/sass/_list.scss
@@ -8,6 +8,7 @@
     @at-root .info-part {
         padding: px2rem(10);
         > li {
+            position: relative;
             font-size: 0;
             @include setBackgroundColor(#fff);
             margin-bottom: px2rem(10);
@@ -57,15 +58,19 @@
                     }
                 }
             }
-            .item-link{
-                display: block;
-            }
             .item-state{
+                position: absolute;
+                z-index: 9;
+                right: px2rem(10);
+                top: px2rem(10);
                 text-align: center;
                 min-width: px2rem(80);
                 border:1px solid #ddd;
                 padding: px2rem(6) px2rem(16);
                 @include setFontInfo(#222, $defaultFontFamily, px2rem(14), normal);
+            }
+            .item-link{
+                display: block;
             }
             span{
                 &.item-state{
